syntax = "proto3";

option java_package = "edu.neu.DatastoreService";

service DatastoreService {

    rpc put(PutRequest) returns (APIResponse);

    rpc get(GetRequest) returns (APIResponse);

    rpc delete(DeleteRequest) returns (APIResponse);

    rpc operate(stream OperateRequest) returns (stream OperateResponse);
}

message PutRequest {

    string key = 1;
    string value = 2;
}

message GetRequest {

    string key = 1;
}

message DeleteRequest {

    string key = 1;
}

message APIResponse {

    string value = 1;
    int32 responseCode = 2;
    string responseText = 3;
}

message OperateRequest {

    string serverId = 1;
}

message OperateResponse {

    bool operate = 1;
    string serverId = 2;
}