syntax = "proto3";

option java_package = "edu.neu.CoordinatorService";

service CoordinatorService {
    // grpc bidirectional stream
    rpc operate(stream OperateRequest) returns (stream OperateResponse);
}

message OperateRequest {
    string operation = 1;
    string key = 2;
    string value = 3;
    string callerId = 4;
}

message OperateResponse {
    int32 code = 1;
    string message = 2;
    string value = 3;
}